@@ -1,5 +1,8 @@
 package uk.gov.justice.laa.portal.landingpage.controller;
 
+import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getListFromHttpSession;
+import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getObjectFromHttpSession;
+
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -57,6 +60,7 @@ import uk.gov.justice.laa.portal.landingpage.exception.TechServicesClientExcepti
 import uk.gov.justice.laa.portal.landingpage.forms.ApplicationsForm;
 import uk.gov.justice.laa.portal.landingpage.forms.EditUserDetailsForm;
 import uk.gov.justice.laa.portal.landingpage.forms.FirmSearchForm;
+import uk.gov.justice.laa.portal.landingpage.forms.MultiFirmForm;
 import uk.gov.justice.laa.portal.landingpage.forms.OfficesForm;
 import uk.gov.justice.laa.portal.landingpage.forms.RolesForm;
 import uk.gov.justice.laa.portal.landingpage.forms.UserDetailsForm;
@@ -74,8 +78,6 @@ import uk.gov.justice.laa.portal.landingpage.service.UserService;
 import uk.gov.justice.laa.portal.landingpage.techservices.SendUserVerificationEmailResponse;
 import uk.gov.justice.laa.portal.landingpage.techservices.TechServicesApiResponse;
 import uk.gov.justice.laa.portal.landingpage.utils.CcmsRoleGroupsUtil;
-import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getListFromHttpSession;
-import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getObjectFromHttpSession;
 import uk.gov.justice.laa.portal.landingpage.utils.UserUtils;
 import uk.gov.justice.laa.portal.landingpage.viewmodel.AppRoleViewModel;
 
@@ -445,7 +447,7 @@ public class UserController {
 
     @GetMapping("/user/create/multi-firm")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).CREATE_EXTERNAL_USER)")  
-    public String createUserMultiFirm(UserDetailsForm userDetailsForm, HttpSession session, Model model) {
+    public String createUserMultiFirm(MultiFirmForm multiFirmForm, HttpSession session, Model model) {
         // Check if multi-firm feature is enabled
         if (!enableMultiFirmUser) {
             return "redirect:/admin/user/create/select-firm";
@@ -456,14 +458,20 @@ public class UserController {
             return "redirect:/admin/user/create/details";
         }
         
-        model.addAttribute("userDetailsForm", userDetailsForm);
+        // Pre-populate form with value from session if it exists
+        Boolean isMultiFirmUser = (Boolean) session.getAttribute("isMultiFirmUser");
+        if (isMultiFirmUser != null) {
+            multiFirmForm.setIsMultiFirmUser(isMultiFirmUser);
+        }
+        
+        model.addAttribute("multiFirmForm", multiFirmForm);
         model.addAttribute(ModelAttributes.PAGE_TITLE, "Allow multi-firm access");
         return "add-user-multi-firm";
     }
 
     @PostMapping("/user/create/multi-firm")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).CREATE_EXTERNAL_USER)")
-    public String postUserMultiFirm(@Valid UserDetailsForm userDetailsForm, BindingResult result,
+    public String postUserMultiFirm(@Valid MultiFirmForm multiFirmForm, BindingResult result,
             HttpSession session, Model model) {
         
         // Check if multi-firm feature is enabled
@@ -471,14 +479,14 @@ public class UserController {
             return "redirect:/admin/user/create/select-firm";
         }
         
-        if (userDetailsForm.getIsMultiFirmUser() == null) {
+        if (multiFirmForm.getIsMultiFirmUser() == null) {
             result.rejectValue("isMultiFirmUser", "error.multiFirmUser",
                     "You must select whether this user requires access to multiple firms");
         }
         
         if (result.hasErrors()) {
             log.debug("Validation errors occurred while setting multi-firm access: {}", result.getAllErrors());
-            model.addAttribute("userDetailsForm", userDetailsForm);
+            model.addAttribute("multiFirmForm", multiFirmForm);
             model.addAttribute(ModelAttributes.PAGE_TITLE, "Allow multi-firm access");
             return "add-user-multi-firm";
         }
@@ -489,10 +497,10 @@ public class UserController {
             return "redirect:/admin/user/create/details";
         }
         
-        session.setAttribute("isMultiFirmUser", userDetailsForm.getIsMultiFirmUser());
+        session.setAttribute("isMultiFirmUser", multiFirmForm.getIsMultiFirmUser());
         
         // If multi-firm user, skip firm selection and go directly to check answers
-        if (Boolean.TRUE.equals(userDetailsForm.getIsMultiFirmUser())) {
+        if (Boolean.TRUE.equals(multiFirmForm.getIsMultiFirmUser())) {
             return "redirect:/admin/user/create/check-answers";
         } else {
             // Single firm user - go to firm selection
@@ -663,16 +671,26 @@ public class UserController {
         Optional<EntraUserDto> userOptional = getObjectFromHttpSession(session, "user", EntraUserDto.class);
         Optional<UserProfileDto> userProfileOptional = getObjectFromHttpSession(session, "userProfile",
                 UserProfileDto.class);
-        if (userOptional.isPresent() && userProfileOptional.isPresent()) {
+        
+        // Get multi-firm user flag from session
+        Boolean isMultiFirmUser = (Boolean) session.getAttribute("isMultiFirmUser");
+        
+        if (userOptional.isPresent()) {
             EntraUserDto user = userOptional.get();
             model.addAttribute("user", user);
-            model.addAttribute("userProfile", userProfileOptional.get());
+            
+            // For multi-firm users, userProfile will be null
+            if (Boolean.TRUE.equals(isMultiFirmUser)) {
+                model.addAttribute("userProfile", null);
+            } else if (userProfileOptional.isPresent()) {
+                model.addAttribute("userProfile", userProfileOptional.get());
+            } else {
+                log.error("No userProfile attribute was present for single-firm user.");
+            }
         } else {
             log.error("No user attribute was present in request. User not added to model.");
         }
         
-        // Get multi-firm user flag from session before removing it
-        Boolean isMultiFirmUser = (Boolean) session.getAttribute("isMultiFirmUser");
         model.addAttribute("isMultiFirmUser", isMultiFirmUser != null ? isMultiFirmUser : false);
         
         // Add feature flag to control multi-firm UI display
@@ -806,27 +824,33 @@ public class UserController {
     @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String editUserApps(@PathVariable String id,
                                @RequestParam(value = "errorMessage", required = false) String errorMessage,
-                               Model model, HttpSession session) {
+                               Model model, HttpSession session, Authentication authentication) {
+        UserProfile currentUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         UserType userType = user.getUserType();
         Set<AppDto> userAssignedApps = userService.getUserAppsByUserId(id);
         List<AppDto> availableApps = userService.getAppsByUserType(userType);
+
+        List<AppDto> editableApps = availableApps.stream()
+                .filter(app -> roleAssignmentService.canUserAssignRolesForApp(currentUserProfile, app))
+                .toList();
+
         @SuppressWarnings("unchecked")
         Map<Integer, List<String>> selectedAppRole = (Map<Integer, List<String>>) session.getAttribute("editUserAllSelectedRoles");
         if (Objects.isNull(selectedAppRole)) {
             // Add selected attribute to available apps based on user assigned apps
-            availableApps.forEach(app -> {
+            editableApps.forEach(app -> {
                 app.setSelected(userAssignedApps.stream()
                         .anyMatch(userApp -> userApp.getId().equals(app.getId())));
             });
         } else {
-            availableApps.forEach(app -> {
+            editableApps.forEach(app -> {
                 app.setSelected(selectedAppRole.containsKey(app.getId()));
             });
         }
 
         model.addAttribute("user", user);
-        model.addAttribute("apps", availableApps);
+        model.addAttribute("apps", editableApps);
         model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user services - " + user.getFullName());
         if (errorMessage != null) {
             model.addAttribute("errorMessage", errorMessage);
@@ -1004,7 +1028,8 @@ public class UserController {
     @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String editUserRolesCheckAnswer(@PathVariable String id,
                                            @RequestParam(value = "errorMessage", required = false) String errorMessage,
-                                           Model model, HttpSession session) {
+                                           Model model, HttpSession session, Authentication authentication) {
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         @SuppressWarnings("unchecked")
         Map<Integer, List<String>> editUserAllSelectedRoles = (Map<Integer, List<String>>) session
@@ -1015,7 +1040,8 @@ public class UserController {
         UserType userType = user.getUserType();
         List<String> selectedApps = getListFromHttpSession(session, "selectedApps", String.class)
                 .orElseGet(ArrayList::new);
-        Map<String, AppDto> availableApps = userService.getAppsByUserType(userType).stream()
+        Map<String, AppDto> editableApps = userService.getAppsByUserType(userType).stream()
+                .filter(app -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, app))
                 .filter(app -> selectedApps.contains(app.getId()))
                 .collect(Collectors.toMap(AppDto::getId, Function.identity()));
 
@@ -1047,7 +1073,7 @@ public class UserController {
                     }
                 } else {
                     UserRole userRole = new UserRole();
-                    userRole.setAppName(availableApps.get(selectedApps.get(key)).getName());
+                    userRole.setAppName(editableApps.get(selectedApps.get(key)).getName());
                     userRole.setRoleName("No Role selected");
                     userRole.setUrl(url);
                     selectedAppRole.add(userRole);
@@ -1070,6 +1096,7 @@ public class UserController {
                                                  Authentication authentication) {
         UUID uuid = UUID.fromString(id);
 
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         @SuppressWarnings("unchecked")
         Map<Integer, List<String>> allSelectedRolesByPage = (Map<Integer, List<String>>) session
@@ -1080,10 +1107,15 @@ public class UserController {
         List<String> allSelectedRoles = allSelectedRolesByPage.values().stream().filter(Objects::nonNull)
                 .flatMap(List::stream)
                 .toList();
+        List<String> nonEditableRoles = userService.getUserAppRolesByUserId(id).stream()
+                .filter(role -> !roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, role.getApp()))
+                .map(AppRoleDto::getId)
+                .toList();
         CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
         UserProfile editorProfile = loginService.getCurrentProfile(authentication);
         if (roleAssignmentService.canAssignRole(editorProfile.getAppRoles(), allSelectedRoles)) {
-            Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles, currentUserDto.getUserId());
+            Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles,
+                    nonEditableRoles, currentUserDto.getUserId());
             if (updateResult.get("error") != null) {
                 String errorMessage = updateResult.get("error");
                 return "redirect:/admin/users/edit/" + uuid + "/roles-check-answer?errorMessage=" + errorMessage;
@@ -1328,20 +1360,25 @@ public class UserController {
     @GetMapping("/users/grant-access/{id}/apps")
     @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantAccessEditUserApps(@PathVariable String id, ApplicationsForm applicationsForm, Model model,
-            HttpSession session) {
+                                          HttpSession session, Authentication authentication) {
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         UserType userType = user.getUserType();
         Set<AppDto> userAssignedApps = userService.getUserAppsByUserId(id);
         List<AppDto> availableApps = userService.getAppsByUserType(userType);
 
+        List<AppDto> editableApps = availableApps.stream()
+                .filter(app -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, app))
+                .toList();
+
         // Add selected attribute to available apps based on user assigned apps
-        availableApps.forEach(app -> {
+        editableApps.forEach(app -> {
             app.setSelected(userAssignedApps.stream()
                     .anyMatch(userApp -> userApp.getId().equals(app.getId())));
         });
 
         model.addAttribute("user", user);
-        model.addAttribute("apps", availableApps);
+        model.addAttribute("apps", editableApps);
 
         // Store the model in session to handle validation errors later
         session.setAttribute("grantAccessUserAppsModel", model);
@@ -1355,7 +1392,6 @@ public class UserController {
             @Valid ApplicationsForm applicationsForm, BindingResult result,
             Authentication authentication,
             Model model, HttpSession session) {
-
         if (result.hasErrors()) {
             log.debug("Validation errors occurred while selecting apps: {}", result.getAllErrors());
             // If there are validation errors, return to the apps page with errors
@@ -1380,9 +1416,14 @@ public class UserController {
         // If no apps are selected, persist empty roles to database and redirect to
         // manage user page
         if (selectedApps.isEmpty()) {
+            UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
             // Update user to have no roles (empty list)
             CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-            Map<String, String> updateResult = userService.updateUserRoles(id, new ArrayList<>(), currentUserDto.getUserId());
+            List<String> nonEditableRoles = userService.getUserAppRolesByUserId(id).stream()
+                    .filter(role -> !roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, role.getApp()))
+                    .map(AppRoleDto::getId)
+                    .toList();
+            Map<String, String> updateResult = userService.updateUserRoles(id, new ArrayList<>(), nonEditableRoles, currentUserDto.getUserId());
             UserProfileDto userProfileDto = userService.getUserProfileById(id).orElse(null);
             UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
                     userProfileDto != null ? userProfileDto.getId() : null,
@@ -1412,16 +1453,18 @@ public class UserController {
             Authentication authentication,
             Model model, HttpSession session) {
 
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         final UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         List<String> selectedApps = getListFromHttpSession(session, "grantAccessSelectedApps", String.class)
                 .orElseGet(() -> {
                     // If no selectedApps in session, get user's current apps
-                    Set<AppDto> userApps = userService.getUserAppsByUserId(id);
-                    List<String> userAppIds = userApps.stream()
+                    List<String> userApps = userService.getUserAppsByUserId(id)
+                            .stream()
+                            .filter(app -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, app))
                             .map(AppDto::getId)
-                            .collect(Collectors.toList());
-                    session.setAttribute("grantAccessSelectedApps", userAppIds);
-                    return userAppIds;
+                            .toList();
+                    session.setAttribute("grantAccessSelectedApps", userApps);
+                    return userApps;
                 });
 
         // Ensure the selectedAppIndex is within bounds
@@ -1542,6 +1585,7 @@ public class UserController {
         // Add the roles for the currently selected app to a map for lookup.
         allSelectedRolesByPage.put(selectedAppIndex, rolesForm.getRoles());
         if (selectedAppIndex >= selectedApps.size() - 1) {
+            UserProfile currentUserProfile = loginService.getCurrentProfile(authentication);
             // Clear the grantAccessUserRolesModel and page roles from session to avoid
             // stale data
             session.removeAttribute("grantAccessUserRolesModel");
@@ -1550,10 +1594,14 @@ public class UserController {
             List<String> allSelectedRoles = allSelectedRolesByPage.values().stream().filter(Objects::nonNull)
                     .flatMap(List::stream)
                     .toList();
+            List<String> nonEditableRoles = userService.getUserAppRolesByUserId(id).stream()
+                    .filter(role -> !roleAssignmentService.canUserAssignRolesForApp(currentUserProfile, role.getApp()))
+                    .map(AppRoleDto::getId)
+                    .toList();
             CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
             UserProfile editorProfile = loginService.getCurrentProfile(authentication);
             if (roleAssignmentService.canAssignRole(editorProfile.getAppRoles(), allSelectedRoles)) {
-                Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles, currentUserDto.getUserId());
+                Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles, nonEditableRoles, currentUserDto.getUserId());
                 UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
                         editorProfile.getId(),
                         currentUserDto,
@@ -1709,14 +1757,18 @@ public class UserController {
      */
     @GetMapping("/users/grant-access/{id}/check-answers")
     @PreAuthorize("@accessControlService.canEditUser(#id)")
-    public String grantAccessCheckAnswers(@PathVariable String id, Model model) {
+    public String grantAccessCheckAnswers(@PathVariable String id, Model model, Authentication authentication) {
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
 
         // Get user's current app roles
         List<AppRoleDto> userAppRoles = userService.getUserAppRolesByUserId(id);
+        List<AppRoleDto> editableUserAppRoles = userAppRoles.stream()
+                .filter(role -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, role.getApp()))
+                .toList();
 
         // Group roles by app name and sort by app name
-        Map<String, List<AppRoleDto>> groupedAppRoles = userAppRoles.stream().sorted()
+        Map<String, List<AppRoleDto>> groupedAppRoles = editableUserAppRoles.stream().sorted()
                 .collect(Collectors.groupingBy(
                         appRole -> appRole.getApp().getName(),
                         LinkedHashMap::new, // Preserve insertion order
@@ -1734,7 +1786,7 @@ public class UserController {
         List<OfficeDto> userOffices = userService.getUserOfficesByUserId(id);
 
         model.addAttribute("user", user);
-        model.addAttribute("userAppRoles", userAppRoles);
+        model.addAttribute("userAppRoles", editableUserAppRoles);
         model.addAttribute("groupedAppRoles", sortedGroupedAppRoles);
         model.addAttribute("userOffices", userOffices);
         model.addAttribute("externalUser", user.getUserType() == UserType.EXTERNAL);
